Display users new tweets, timestamps with moment.js, and users' timeline.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="data_generator.js"></script>
     <script src="js/moment.js"></script>
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
   <header>
